--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -9,7 +9,7 @@ html(class="no-js loading", lang="en")
     head
         +head(head.defaults)
     body.page
-        |%=symbols=%
+        include ../../../dev/temp/svg-symbols.svg
         //-+loader
         block header
 
