--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -5,7 +5,7 @@
     &_search
         .grid__col_six
             +above(1025px)
-                @extends .grid__col_three
+                @extend .grid__col_three
 
     .filter
         +below(1300px)
