--- a/markup/components/tags/tags.styl
+++ b/markup/components/tags/tags.styl
@@ -11,8 +11,8 @@
 
     &__link
         display: block
-        width: 100%
-        height: 100%
+        width auto
+        height auto
         padding: 5px 10px
         white-space nowrap
         font-size: 14px
