--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -3,6 +3,11 @@
     box-sizing: border-box
     padding-top: 60px
     padding-bottom: 60px
+    max-width 100vw
+
+    +below(768px)
+        padding-top: 0
+        padding-bottom: 0
 
     .popup__close
         transform: translate(0, 0)
