--- a/markup/components/model-preview/model-preview.pug
+++ b/markup/components/model-preview/model-preview.pug
@@ -27,6 +27,7 @@ mixin model-preview(photos, name, age, price, isOnline)
 
         +e.footer
             +e.popup
+                +close._top_right
                 +e.breakinfo
                     +e.row._top
                         span On tour in Moscow
