--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -1,8 +1,12 @@
 .model-preview
+    position relative
     display: block
     max-width: 258px
     box-shdow: 0 0 0 0 rgba(0, 0, 0, 0)
     m-transition(all)
+
+    &.active
+        z-index 100
 
     &.preload
         opacity 0
@@ -244,6 +248,22 @@
 
     &__popup
         m-transition(margin-top)
+        z-index: 60
+        position relative
+
+        &.active
+            min-width 258px
+            background-color #ffffff
+
+            + .popup__actions
+                min-width 258px
+
+        .close
+            z-index 60
+
+        &:not(.active)
+            .close
+                display none !important
 
         &.active
             background-color #ffffff
