contact us page

--- a/markup/components/footer/footer.pug
+++ b/markup/components/footer/footer.pug
@@ -55,8 +55,8 @@ mixin footer()
                         +col(4).footer__col.footer__col_half-mob.no-padding-top
                             +vertical-nav
                                 +vertical-nav-item('terms.html') Privacy & Terms
-                                +vertical-nav-item('terms.html') About Us
-                                +vertical-nav-item('terms.html') Contact Us
+                                +vertical-nav-item('about-us.html') About Us
+                                +vertical-nav-item('contact-us.html') Contact Us
 
                     +grid.footer__row
                         +col(4).footer__col.footer__col_half-mob.order-4
