--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -290,8 +290,9 @@
         fill: mainColor
 
     &__fullinfo
-        background: #fff;
+        background #fff
         display none
+        overflow hidden
         m-transition(opacity)
 
     &__rating
