--- a/markup/components/model-info-popup/model-info-popup.pug
+++ b/markup/components/model-info-popup/model-info-popup.pug
@@ -25,5 +25,5 @@ mixin model-info-popup()
                 +tags-item('model-list-search-result.html') Pornstar
                 +tags-item('model-list-search-result.html') With Video
 
-        +e.A.action(href='#' data-popup-id='#profile-popup' data-action='show').js-toggle-popup View profile
+        +e.A.action(href='model-profile.html') View profile
         +close._top_right
