--- a/markup/components/model-preview/model-preview.pug
+++ b/markup/components/model-preview/model-preview.pug
@@ -7,8 +7,8 @@ include ../tags/tags
 mixin model-preview(photos, name, age, price, isOnline)
     - var maxPhotosCount = 5
 
-    +b.model-preview(class="js-toggle-popup" data-popup-id="#profile-popup")&attributes(attributes)
-        +e.content
+    +b.model-preview&attributes(attributes)
+        +e.A(href='model-profile.html').content
             +e.slider.swiper-container(data-max-slides=maxPhotosCount)
                 +e.photos.swiper-wrapper
                     each photo, index in photos.slice(0, maxPhotosCount)
@@ -18,7 +18,7 @@ mixin model-preview(photos, name, age, price, isOnline)
                 +e.online
             block
             if photos.length > maxPhotosCount
-                +e.A.cutoff(href="#")
+                +e.DIV.cutoff
                     b=`+${photos.slice(maxPhotosCount).length}`
                     span photos
             +e.pagination
@@ -55,4 +55,4 @@ mixin model-preview(photos, name, age, price, isOnline)
 
             +e.actions
                 +e.DIV.action._info i
-                +e.A(href='#').action._profile View profile
+                +e.DIV.action._profile View profile
