--- a/markup/components/model-preview/model-preview.pug
+++ b/markup/components/model-preview/model-preview.pug
@@ -13,7 +13,8 @@ mixin model-preview(photos, name, age, price, isOnline)
                 +e.photos.swiper-wrapper
                     each photo, index in photos.slice(0, maxPhotosCount)
                         +e.slide.swiper-slide
-                            +e.IMG.photo(src=`%=static=%img/content/model-preview/${photo}.jpg` alt=`Model ${name}`)
+                            +e.IMG.photo.swiper-lazy(data-src=`static/img/content/model-preview/${photo}.jpg` alt=`Model ${name}`)
+                            .swiper-lazy-preloader
             if isOnline
                 +e.online
             block
