--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -25,6 +25,10 @@
         +below(768px)
             padding: 0
 
+    &.popup_mobile_only
+        +above(768px)
+            display none !important
+
     &_wrapper_100
         & ^[0]__wrapper
             height: 100%
@@ -61,8 +65,12 @@
             align-items: initial
             height: initial
 
+            .popup_mobile_only &
+                width 100%
+                height 100%
+
         &_full
-            width 100%  t
+            width 100%
 
     &__close
         display: none
