--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -62,9 +62,9 @@
             cursor default
 
         +below(700px)
-            justify-content: initial
-            align-items: initial
-            height: initial
+            justify-content: stretch
+            align-items: stretch
+            height: auto
 
             .popup_mobile_only &
                 width 100%
