--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -8,6 +8,9 @@
     padding: 24px 0
     border-bottom: 1px solid borderColor
 
+    +below(768px)
+        overflow hidden
+
     &__mobile-nav
         display: flex
         justify-content: center
