--- a/markup/pages/model-list-search-result-agency.pug
+++ b/markup/pages/model-list-search-result-agency.pug
@@ -17,6 +17,11 @@ include ../components/auth-popup/auth-popup
 include ../components/map/map
 include ../components/model-map/model-map
 
+include ../components/profile-popup/profile-popup
+include ../components/profile-common-popup/profile-common-popup
+include ../components/profile-video-popup/profile-video-popup
+include ../components/profile-photo-popup/profile-photo-popup
+
 block header
     +header(null, null, 'all escorts')
 
@@ -29,5 +34,15 @@ block popups
     +auth-popup
     +filter-extended
 
+    +profile-popup
+    +profile-photo-popup
+    +profile-video-popup
+    +profile-common-popup-call
+    +profile-common-popup-qr
+    +profile-common-popup-report
+
 block footer
     +footer
+
+block scripts
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
