--- a/markup/pages/model-list.pug
+++ b/markup/pages/model-list.pug
@@ -6,17 +6,13 @@ include ../components/arrow-up/arrow-up
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
-include ../components/model-map/model-map
-include ../components/filter/filter
-include ../components/popup-welcome/popup-welcome
-include ../components/select-city-popup/select-city-popup
+include ../components/auth-popup/auth-popup
+include ../components/map/map
+
 include ../components/profile-popup/profile-popup
 include ../components/profile-common-popup/profile-common-popup
 include ../components/profile-video-popup/profile-video-popup
 include ../components/profile-photo-popup/profile-photo-popup
-include ../components/auth-popup/auth-popup
-include ../components/map/map
-include ../components/model-map/model-map
 
 block header
     +header(null, null, 'all escorts')
@@ -31,8 +27,16 @@ block popups
     +auth-popup
     +filter-extended
 
+    +profile-popup
+    +profile-photo-popup
+    +profile-video-popup
+    +profile-common-popup-call
+    +profile-common-popup-qr
+    +profile-common-popup-report
+
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block footer
     +footer
