--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -69,6 +69,10 @@
         +below(768px)
             padding-right: 0
 
+    .selectbox, .input-selectlike
+        height 40px
+        transform translateY(-20px)
+
     &__social-items
         margin-top: 21px
 
