--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -41,6 +41,7 @@
         display: inline-block
         vertical-align middle
         transition all .25s ease-in-out
+        flex-shrink 0
 
         &_fill
             fill: darkGreyColor
