--- a/markup/components/share/share.styl
+++ b/markup/components/share/share.styl
@@ -36,6 +36,9 @@
         margin-top: -1px
         padding: 0
 
+        svg
+            flex-shrink 0
+
         &_dots
             margin-left: initial
 
