--- a/markup/components/textarea/textarea.styl
+++ b/markup/components/textarea/textarea.styl
@@ -18,3 +18,6 @@
         &[placeholder]:empty::before
             content: attr(placeholder)
             pointer-events none
+
+        &[placeholder]:focus::before
+            display none
