--- a/markup/components/accordion/accordion.styl
+++ b/markup/components/accordion/accordion.styl
@@ -123,6 +123,10 @@
         overflow hidden
         display: none
 
+        +below(768px)
+            padding-left: 40px;
+            padding-right: 40px;
+
         ^[0]_faq &
             padding-top: 0
 
