--- a/markup/components/agency-card/agency-card.pug
+++ b/markup/components/agency-card/agency-card.pug
@@ -64,4 +64,4 @@ mixin agency-card-new(avatar, bg)
                     +short-info-content
                         +short-info-text.A(href='tel://443069990852') +44 3069—990852
 
-        +button()(href='#')._uppercase.hide-desktop view profile
+        +button()(href='agency.html')._uppercase.hide-desktop view profile
