--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -9,6 +9,7 @@
 
         +below(768px)
             margin-top: 24px
+            padding-bottom: 24px;
 
         .image-bg
             z-index: initial
