--- a/markup/components/user-dropdown-popup/user-dropdown-popup.styl
+++ b/markup/components/user-dropdown-popup/user-dropdown-popup.styl
@@ -1,3 +1,6 @@
+#user-dropdown-popup
+    z-index 100000 !important
+
 .user-dropdown-popup
     display: block
     background-color: darkGreyColor
