--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -62,12 +62,20 @@
         +below(768px)
             width 100%
 
+    &__checkboxes .grid__col
+        +below(768px)
+            width 50%
+
     &_additional
 
         & ^[0]__hide-additional
             // opacity: 0
             // pointer-events: none
 
+            +below(768px)
+                display none
+
+        .filter__hide-additional-mob
             +below(768px)
                 display none
 
@@ -158,7 +166,7 @@
     .field
         margin-top: 0
 
-    +above(400px)
+    +above(769px)
         &__rating-heading
             display: flex
             align-items: center
