--- a/markup/components/post-preview/post-preview.styl
+++ b/markup/components/post-preview/post-preview.styl
@@ -31,13 +31,14 @@
 
     &:hover
         & ^[0]__body
+            background-color mainColor
             border-color mainColor
 
         & ^[0]__text
-            color mainColor
+            color #fff
 
         & ^[0]__date
-            color rgba(mainColor, .3)
+            color #fff
 
 
 
