--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -1,4 +1,8 @@
 #select-city
+    .popup__wrapper
+        height auto !important
+        padding-bottom 30vh
+
     +below(1024px)
         top: 0 !important
         padding: 0 !important
@@ -14,7 +18,8 @@
     padding-top: 20px
     padding-bottom: 20px
     overflow auto;
-    max-height: 627px
+    max-height: none
+    min-height 100vh
 
     +below(1024px)
         padding-top: 0
