--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -149,6 +149,11 @@
         &__label
             margin-right: 114px
 
+            +below(768px)
+                margin-right: 0
+                margin-bottom: 24px
+                display: block
+
         &__buttons
             width: 100%
             margin: 0
