--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -58,6 +58,8 @@
                 width: 100%
                 height: 60px
                 border-bottom: 1px solid borderColor
+                margin-left 0
+                padding-top 0
 
                 .rating
                     width: 100%
