--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -20,6 +20,9 @@
         & > ^[0]__placeholder span
             display: inline-block
 
+    &_dark
+        background-color darkGreyColor
+
     &__input
         width: 100%
         flex-grow: 1
@@ -32,6 +35,9 @@
 
         &::placeholder
             opacity 0
+
+        .search-bar_dark &
+            color: #fff
 
     &__placeholder
         position: absolute
@@ -63,6 +69,9 @@
         fill: darkGreyColor
         m-transition(all)
         flex-shirnk: 0
+
+        .search-bar_dark &
+            fill: mainColor
 
         &:hover
             opacity .6
