--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -31,6 +31,9 @@
         +below(1023px)
             flex-direction: column
 
+        +below(768px)
+            margin-top: 24px
+
     &__main
         flex: 1
         margin-right: 24px
@@ -46,7 +49,16 @@
 
         +below(1023px)
             width: 100%
-            margin-bottom: 24px
+            margin-top: 24px
+            order: 2
+
+            .fill-profile-nav__item.active
+                position absolute
+                top 140px
+                left 0
+                right 0
+                margin 0 31px
+                width auto
 
     &__masonry-item:not(:last-child)
         margin-bottom: 24px
@@ -68,10 +80,17 @@
         & > .heading
             margin-bottom: 11px
 
+        &:first-child
+            +below(1024px)
+                .heading
+                    margin-bottom: 84px
+
         &:not(:first-child)
             margin-top: 40px
             padding-top: 35px
             border-top: 1px solid borderColor
+
+
 
         &_small-top-space:not(:first-child)
             margin-top 0
