--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -90,7 +90,7 @@
             height: auto
 
         +below(900px)
-            margin-top: 33px
+            margin-top: 0
             border: 0
 
     &__left
@@ -104,6 +104,13 @@
             width: 100%
             margin 0
             border-top: 1px solid borderColor
+            display none
+
+            .message:first-child
+                margin-top: 33px
+
+            &.active
+                display block
 
         .message
             margin-top: -1px
@@ -135,12 +142,14 @@
         flex: 1
         overflow: hidden
 
+        +below(900px)
+            display none
+
+            &.active
+                display flex
+
         .scroll-wrapper
             flex: 1
-
-        +below(900px)
-            //- TODO AJAX PRELOAD??
-            display: none
 
         .message
             display: inline-block
