--- a/markup/components/city-list/city-list.pug
+++ b/markup/components/city-list/city-list.pug
@@ -1,3 +1,5 @@
+include ../button/button
+
 mixin city-list()
     +b.FORM(method='POST' action='#').city-list&attributes(attributes)
         +cities-container
