--- a/markup/pages/popups/_layout.pug
+++ b/markup/pages/popups/_layout.pug
@@ -1,5 +1,6 @@
 include ../../../node_modules/bemto.pug/bemto
 include ../../components/popup/popup
 include ../../components/select-city-popup/select-city-popup
+include ../../components/auth-popup/auth-popup
 
 block content
